--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     </head>
     <body>
         <header class="header">
-            <input type="number" name="" id="count" placeholder="Simulation Number">
-            <button id="button" onclick="start()">Start</button>
+            <input type="number" name="" id="count" placeholder="Simulation #">
             <input type="number" name="" id="win" disabled>
             <input type="number" name="" id="loss" disabled>
         </header>
+        <h1 id="percent">0%</h1>
+        <button id="button" onclick="start()">Start</button>
+        <div id="span"></div>
+        <div id="span2"></div>
     </body>
 </html>
