--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Monte</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
@@ -12,8 +12,8 @@
     <body>
         <header class="header">
             <input type="number" name="" id="count" placeholder="Simulation #">
-            <input type="number" name="" id="win" disabled>
-            <input type="number" name="" id="loss" disabled>
+            <input type="number" id="win" placeholder="Stay" disabled>
+            <input type="number" id="loss" placeholder="Switch" disabled>
         </header>
         <h1 id="percent">0%</h1>
         <button id="button" onclick="start()">Start</button>
