--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Monte</title>
+        <link rel="apple-touch-icon" sizes="57x57" href="Resources/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="Resources/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="Resources/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="Resources/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="Resources/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="Resources/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="Resources/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="Resources/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="Resources/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="Resources/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="Resources/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="Resources/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="Resources/favicon-16x16.png">
+        <link rel="manifest" href="/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="Resources/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
@@ -15,7 +32,6 @@
             <input type="number" id="win" placeholder="Stay" disabled>
             <input type="number" id="loss" placeholder="Switch" disabled>
         </header>
-        <h1 id="percent">0%</h1>
         <button id="button" onclick="start()">Start</button>
         <div id="span"></div>
         <div id="span2"></div>
