focus event on input

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <header class="header">
-            <input type="number" name="" id="count" placeholder="Simulation #">
+            <input type="number" name="" onfocus="this.value=''" id="count" placeholder="Simulation #">
             <input type="number" id="win" placeholder="Stay" disabled>
             <input type="number" id="loss" placeholder="Switch" disabled>
         </header>
