Added Github link and shortened sim time

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <input type="number" id="win" placeholder="Stay" disabled>
             <input type="number" id="loss" placeholder="Switch" disabled>
         </header>
+        <a href="https://github.com/MatthewZenn/Monte"><p>Github</p></a>
         <button id="button" onclick="start()">Start</button>
         <div id="span"></div>
         <div id="span2"></div>
